syntax="proto3";

package book_service;
option go_package="genproto/book_service";

service BookService {
    rpc CreateBook(CreateBookRequest) returns (IDTracker) {}
    rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse) {}
    rpc GetBookByID(GetBookByIDRequest) returns (Book) {}
    rpc UpdateBook(UpdateBookRequest) returns (IDTracker) {}
    rpc DeleteBook(DeleteBookRequest) returns (IDTracker) {}
}

message Book {
    string id = 1;
    string name = 2;
    string about = 4;
    string isbn = 5;
}

message CreateBookRequest {
    string name = 1;
    string about = 3;
    string isbn = 4;
}

message GetAllBooksRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetAllBooksResponse {
    repeated Book books = 1;
    int32 count = 2;
}

message GetBookByIDRequest {
    string id = 1;
}

message UpdateBookRequest {
    string id = 1;
    string name = 2;
    string about = 4;
    string isbn = 5;
}

message DeleteBookRequest {
    string id = 1;
}

message IDTracker {
    string id = 1;
}
